--- a/_objects.buttons.scss
+++ b/_objects.buttons.scss
@@ -7,7 +7,7 @@
  */
 
 // Predefine the variables below in order to alter and enable specific features.
-$inuit-btn-padding:     halve($spacing) !default;
+$o-btn-padding:         halve($spacing) !default;
 $o-btn-padding--small:  halve($o-btn-padding) !default;
 $o-btn-padding--large:  double($o-btn-padding) !default;
 $o-btn-background:      transparent !default;
@@ -29,7 +29,7 @@ $o-btn--pill:    false !default;
 // Here we set a variable assuming that `box-sizing: border-box;` is not set
 // globally. If it has been previously been defined, the following variable will
 // be overriden and will be set to `true`.
-$inuit-global-border-box: false !default;
+$global-border-box: false !default;
 
 
 
